Adding log in page and authentication

--- a/WebsiteAboutSneks/WebsiteAboutSneks.csproj
+++ b/WebsiteAboutSneks/WebsiteAboutSneks.csproj
@@ -184,6 +184,7 @@
     <Content Include="Views\Answers\Details.cshtml" />
     <Content Include="Views\Answers\Edit.cshtml" />
     <Content Include="Views\Answers\Index.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
