Added method to ask questions about a snake

--- a/WebsiteAboutSneks/WebsiteAboutSneks.csproj
+++ b/WebsiteAboutSneks/WebsiteAboutSneks.csproj
@@ -185,6 +185,7 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Snakes.cshtml" />
     <Content Include="Views\Home\ShowSnake.cshtml" />
+    <Content Include="Views\Questions\AskQuestion.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
