Added snake questions view

--- a/WebsiteAboutSneks/WebsiteAboutSneks.csproj
+++ b/WebsiteAboutSneks/WebsiteAboutSneks.csproj
@@ -185,6 +185,7 @@
     <Content Include="Views\Questions\Details.cshtml" />
     <Content Include="Views\Questions\Edit.cshtml" />
     <Content Include="Views\Questions\Index.cshtml" />
+    <Content Include="Views\Home\SnakeQuestions.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
